ON-11749 # Fixed broken truncation

--- a/src/styles/ob-files.scss
+++ b/src/styles/ob-files.scss
@@ -47,8 +47,6 @@
   background: $grey-lighter;
   padding: $size-7;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
   display: flex;
   justify-content: space-between;
   align-items: center;
